# Intelligent-BI

./: .gitignore  README.md  digest.txt  main.py  pyproject.toml
core/: README.md  app.py  main.py  requirements.txt
core/agents/: __init__.py  sql_agent.py  sql_generator.py
core/config/: agents.yaml  databases.yaml  db_config.yaml  llm_providers.yaml  llms.yaml
core/database/: __init__.py  executor.py  manager.py  service.py  strategy.py  validator.py
core/llm/: __init__.py  generation_chain.py  llm_factory.py  llm_service.py  prompt_manager.py
core/memory/: __init__.py  service.py  state.py
core/models/: __init__.py  sql_agent_models.py
core/prompts/analysis_reporter/: system.prompt  user.prompt
core/prompts/chart_generator/: system.prompt  user.prompt
core/prompts/sql_agent/: system.prompt  user.prompt
core/prompts/sql_generator/: system.prompt  user.prompt
core/prompts/summarizer/: system.prompt  user.prompt
core/utils/: __init__.py  config_parser.py
core/workflows/: orchestrator.py  state.py  tools.py
interface/: app.py  chat.py  sidebar.py  style.css
