[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bi-agent-core"
version = "0.1.0"
description = "Core functionality for the BI Agent project."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain",
    "langchain-core",
    "omegaconf",
    "SQLAlchemy",
    "pandas",
    "sqlparse",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "interface*"]
